--- a/demos/demo2.html
+++ b/demos/demo2.html
@@ -3,11 +3,17 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>eTruncate demo 2</title>
+<link type="text/css" rel="stylesheet" href="style.css"/>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
 <script type="text/javascript" src="../src/jquery.eTruncate.js"></script>
 <script type="text/javascript">
 	jQuery(function($){
-		$("body").append($('<p id="buttonContainer"></p>'));
+		//creates a container for the eTruncate button
+		$("#content").append($('<p id="buttonContainer"></p>'));
+		
+		//initializes eTruncate to truncate all the elements with the class "more" within the div#playlist
+		//it also places the button inside the element with the id "buttonContainer" (created dinamically before)
+		//and changes the default button labels
 		$("#playlist").eTruncate({
 			buttonContainer: "#buttonContainer",
 			showText: "See all the tracks...",
@@ -17,7 +23,13 @@
 </script>
 </head>
 <body>
-	
+	<div id="header">
+		<span class="prev"><a href="demo1.html">&lt; Previous demo</a></span>
+		<span class="title">jQuery eTruncate Demo #2</span>
+		<span class="next"><a href="demo3.html">Next Demo &gt;</a></span>
+		<div class="cleaner"></div>
+	</div>
+	<div id="content">
 	<h1>The Goo Goo Dolls - Let Love in</h1>
 	<img width="300" height="300" src="http://ecx.images-amazon.com/images/I/412N-gpts6L.jpg" alt="Album cover">
 	<ol id="playlist">
@@ -33,7 +45,6 @@
 		<li class="more">Strange Love</li>
 		<li class="more">Become</li>
 	</ol>
-	
-	
+	</div>	
 </body>
 </html>
