--- a/demos/index.html
+++ b/demos/index.html
@@ -19,6 +19,7 @@
 		<li><a href="demo1.html">Demo 1</a> - truncates a list of paragraphs on a long text</li>
 		<li><a href="demo2.html">Demo 2</a> - truncates a list of list elements on a long list</li>
 		<li><a href="demo3.html">Demo 3</a> - truncates part of a set of images</li>
+		<li><a href="demo4.html">Demo 3</a> - instantiate eTruncate on multiple containers</li>
 	</ol>
 </div>
 </body>
