--- a/demos/demo3.html
+++ b/demos/demo3.html
@@ -36,7 +36,7 @@ a img
 	<div id="header">
 		<span class="prev"><a href="demo2.html">&lt; Previous demo</a></span>
 		<span class="title">jQuery eTruncate Demo #3</span>
-		<span class="next">Next Demo &gt;</span>
+		<span class="next"><a href="demo4.html">Next Demo &gt;</a></span>
 		<div class="cleaner"></div>
 	</div>
 	<div id="content">
