Added the ability to access to the eTruncate instance programmatically. Closes #3

--- a/demos/demo4.html
+++ b/demos/demo4.html
@@ -44,7 +44,7 @@
 	<div id="header">
 		<span class="prev"><a href="demo3.html">&lt; Previous demo</a></span>
 		<span class="title">jQuery eTruncate Demo #4</span>
-		<span class="next">Next Demo &gt;</span>
+		<span class="next"><a href="demo5.html">Next Demo &gt;</a></span>
 		<div class="cleaner"></div>
 	</div>
 	<div id="content">
