--- a/demos/index.html
+++ b/demos/index.html
@@ -20,6 +20,7 @@
 		<li><a href="demo2.html">Demo 2</a> - truncates a list of list elements on a long list</li>
 		<li><a href="demo3.html">Demo 3</a> - truncates part of a set of images</li>
 		<li><a href="demo4.html">Demo 3</a> - instantiate eTruncate on multiple containers</li>
+		<li><a href="demo5.html">Demo 5</a> - working programmatically with the eTruncate instance</li>
 	</ol>
 </div>
 </body>
