first version (with provisory css)

--- a/api.html
+++ b/api.html
@@ -1,11 +1,12 @@
 ---
 layout: layout
-title: Home
+title: Api
 ---
 <div id="main">
 	<div id="main_inner">
 		<article>
-			{% include readme.html %}
+			<h1>Api</h1>
+			{% include api.html %}
 		</article>
 	</div>
 </div>
