--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: layout
 title: Home
 ---
-<div id="main">
+<div id="main" class="home">
 	<div id="main_inner">
 		<div id="quickDemo">
 			<a href="#" id="quickDemo_hide">hide</a>
