--- a/demos.html
+++ b/demos.html
@@ -2,18 +2,18 @@
 layout: layout
 title: Demos
 ---
-<div id="main">
+<div id="main" class="demos">
 	<div id="main_inner">
 		<article>
 			<h1>Demos page</h1>
 			<p>Follows a list of the available demos</p>
-			<ol>
-				<li><a href="demo1.html">Demo 1</a> - truncates a list of paragraphs on a long text</li>
-				<li><a href="demo2.html">Demo 2</a> - truncates a list of list elements on a long list</li>
-				<li><a href="demo3.html">Demo 3</a> - truncates part of a set of images</li>
-				<li><a href="demo4.html">Demo 3</a> - instantiate eTruncate on multiple containers</li>
-				<li><a href="demo5.html">Demo 5</a> - working programmatically with the eTruncate instance</li>
-			</ol>
+			<ul class="demos_list">
+				<li><a href="demo1.html">Demo 1</a><br/>truncates a list of paragraphs on a long text</li>
+				<li><a href="demo2.html">Demo 2</a><br/>truncates a list of list elements on a long list</li>
+				<li><a href="demo3.html">Demo 3</a><br/>truncates part of a set of images</li>
+				<li><a href="demo4.html">Demo 3</a><br/>instantiate eTruncate on multiple containers</li>
+				<li><a href="demo5.html">Demo 5</a><br/>working programmatically with the eTruncate instance</li>
+			</ul>
 		</article>
 	</div>
 </div>
